# vulcano_common

./: README.md
vulcano_arm_control/: CMakeLists.txt  package.xml
vulcano_arm_control/config/: controllers.yaml
vulcano_arm_control/launch/: ur10_bringup.launch  ur10_controllers.launch  ur10_ros_control.launch  vulcano_arms_control.launch
vulcano_arm_pad/: CMakeLists.txt  README  package.xml
vulcano_arm_pad/config/: left_arm_ps3.yaml
vulcano_arm_pad/launch/: right_arm_ps3.yaml  vulcano_arm_pad.launch  vulcano_arms_pad.launch
vulcano_arm_pad/src/: vulcano_arm_pad.cpp
vulcano_base_bringup/: CMakeLists.txt  package.xml
vulcano_base_bringup/config/: back_right_laser_filter.yaml  front_laser.yaml  front_laser_filter.yaml  front_left_laser_filter.yaml  global_twist_mux.yaml  io_bridge.yaml  multimaster.yaml  px4_config.yaml  rear_laser.yaml  rear_laser_filter.yaml  twist_mux.yaml  user_twist_mux.yaml
vulcano_base_bringup/launch/: laserscan_multimerger.launch  robotnik_base_hw.launch  vulcano_base.launch  vulcano_base_battery.launch  vulcano_base_complete.launch  vulcano_base_imu.launch  vulcano_base_inverter.launch  vulcano_base_io.launch  vulcano_base_joy.launch  vulcano_base_lasers.launch  vulcano_base_microscan_laser.launch  vulcano_base_multimaster.launch  vulcano_br_io_modbus.launch  vulcano_io_bridge.launch  vulcano_twist_mux.launch  vulcano_twist_mux_tecnalia.launch  vulcano_web.launch
vulcano_base_control/: CMakeLists.txt  README.md  package.xml
vulcano_base_control/config/: base_controllers.yaml  controllers.yaml
vulcano_base_control/launch/: vulcano_base_control.launch
vulcano_base_description/: CMakeLists.txt  README.md  package.xml
vulcano_base_description/launch/: vulcano_base.rviz  vulcano_base_rviz.launch  vulcano_base_state.launch
vulcano_base_description/meshes/bases/: cabinet.stl  vulcano_base_cabinet.dae  vulcano_base_cabinet.stl  vulcano_base_chassis.dae  vulcano_base_chassis.stl
vulcano_base_description/meshes/wheels/: motorwheel_1.dae  motorwheel_1.stl  motorwheel_2.dae  motorwheel_2.stl  rubber_band.stl  wheel_1.dae  wheel_1.stl
vulcano_base_description/robots/: vulcano_base_standalone.urdf.xacro
vulcano_base_description/urdf/: common.gazebo.xacro  vulcano_base.urdf.xacro
vulcano_base_description/urdf/bases/: base.gazebo.xacro  base.urdf.xacro
vulcano_base_description/urdf/wheels/: motor_wheel.urdf.xacro
vulcano_base_navigation/: CMakeLists.txt  README.md  package.xml
vulcano_base_navigation/config_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  eb_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
vulcano_base_navigation/config_rviz/: move_base_local.rviz
vulcano_base_navigation/launch/: vulcano_base_gmapping.launch
vulcano_base_navigation/maps/: lms_test.pgm  lms_test.yaml
vulcano_base_navigation/scripts/: ask_plan.py  path2posearray.py  path_to_posearray.py
vulcano_base_pad/: CMakeLists.txt  README.md  package.xml
vulcano_base_pad/config/: base_logitech.yaml  base_ps3.yaml  base_ps4.yaml  ps3.yaml  ps4.yaml  twist_mux.yaml
vulcano_base_pad/launch/: vulcano_base_pad.launch  vulcano_base_pad_ps4.launch
vulcano_base_pad/src/: vulcano_base_pad.cpp
vulcano_bringup/: CMakeLists.txt  package.xml
vulcano_bringup/config/: left_arm_params.yaml  multimaster.yaml  right_arm_params.yaml  vulcano_laser_config.yaml
vulcano_bringup/launch/: launch_arms.launch  ur10_bringup_ros_control.launch  vulcano_complete.launch  vulcano_laser_filter.launch  vulcano_multimaster.launch  vulcano_tmp.launch
vulcano_calibrated_ur_description/: CMakeLists.txt  README.md  package.xml
vulcano_calibrated_ur_description/urdf/: calibrated_ur10_vulcano_left_arm.urdf.xacro  calibrated_ur10_vulcano_right_arm.urdf.xacro
vulcano_common/: CMakeLists.txt  README.md  package.xml
vulcano_control/: CMakeLists.txt  README.md  package.xml
vulcano_control/config/: left_arm_controllers.yaml  right_arm_controllers.yaml
vulcano_control/config/ros_control/: torso_controllers.yaml
vulcano_control/launch/: torso_ros_control.launch  ur10_ros_control.launch  vulcano_control.launch
vulcano_description/: CMakeLists.txt  README.md  package.xml
vulcano_description/launch/: vulcano.rviz  vulcano_rviz.launch  vulcano_state.launch  vulcano_state_robot.launch
vulcano_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
vulcano_sim_bringup/: CMakeLists.txt  package.xml
vulcano_torso_control/: CMakeLists.txt  package.xml
vulcano_torso_description/: CMakeLists.txt  README.md  package.xml
vulcano_torso_description/launch/: vulcano_torso.rviz  vulcano_torso_rviz.launch  vulcano_torso_state_robot.launch
vulcano_torso_description/meshes/: guidance_base.stl  guidance_main.stl  guidance_slide.stl
vulcano_torso_description/meshes/guidance/: guidance.stl  main.stl  slide.dae  slide.stl  tkd668.stl
vulcano_torso_description/meshes/pantilt/: base.stl  cam_gige_ueye_cp.stl  dynamixel_l42.stl  effi.stl  kinect_xbox_one.dae  kinect_xbox_one.stl  pan.stl  pantilt.stl  tilt.stl  tilt_support.stl
vulcano_torso_description/robots/: vulcano_torso.urdf.xacro  vulcano_torso_standalone.urdf.xacro
vulcano_torso_description/urdf/: common.gazebo.xacro  vulcano_torso.gazebo.xacro  vulcano_torso.urdf.xacro
vulcano_torso_description/urdf/guidance/: guidance.urdf.xacro
vulcano_torso_description/urdf/pantilt/: kinectv2.urdf.xacro  ok_pantilt.urdf.xacro  pantilt.urdf.xacro
vulcano_torso_description/urdf/torso/: torso.urdf.xacro
vulcano_torso_description/urdf/tube_support/: tube_support.urdf.xacro
vulcano_torso_pad/: CMakeLists.txt  package.xml
vulcano_web/: CMakeLists.txt  index.html  index.js  package.xml  setup.py  show_urdf.html
vulcano_web/css_files/: bootOver.css  jquery-ui.css  my_mini.css
vulcano_web/scripts/vulcano_web/: start_recording_server.py
vulcano_web/srv/: RecordVideo.srv  get_controller_options.srv  set_controller_options.srv
(+53 files in other folders)
