<?xml version="1.0"?>
<package>
  <name>vulcano_base_control</name>
  <version>1.0.0</version>
  <description>
		This package contains the launch files that load the required controller interfaces for simulation in Gazebo.
  </description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <!-- run_depend>vulcano_base_pad</run_depend -->   

</package>
