<?xml version="1.0"?>
<package>
  <name>vulcano_base_pad</name>
  <version>1.0.0</version>
  
  <description>The vulcano_base_pad package allows to teleoperate the vulcano_base </description>
  <author email="info@robotnik.es">Robotnik</author>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>twist_mux</run_depend>






</package>
