<?xml version="1.0"?>
<package>
  <name>vulcano_torso_description</name>
  <version>0.0.0</version>
  <description>The vulcano_torso_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/rb1_torso_description</url> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <!-- build_depend>robotnik_sensors</build_depend -->
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <!-- run_depend>robotnik_sensors</run_depend -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
